--- a/test-page.html
+++ b/test-page.html
@@ -106,7 +106,7 @@
                     rows="4"
                     class="w-full px-4 py-2 border border-gray-300 rounded-md focus:ring-2 focus:ring-blue-500 focus:border-blue-500"
                     placeholder="Enter a longer message or paste secrets here for testing..."
-                ></textarea>
+                >Hello World</textarea>
             </div>
 
             <!-- Search Input -->
